[package]
name = "file-diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
sha2 = "0.10.6"
structopt = "0.3.26"
walkdir = "2.3.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["macros", "local-offset"] }
indicatif = "0.17.3"
